--- a/index.html
+++ b/index.html
@@ -1,82 +1,41 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <style>
-    body {
-      background-color: #f0f0f0;
-      font-family: Arial, sans-serif;
-    }
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form </title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    .container {
-      width: 400px;
-      margin: 100px auto;
-      border: 1px solid #ccc;
-      padding: 20px;
-      background-color: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    .logo {
-      width: 100px;
-      height: 100px;
-      margin: 0 auto;
-      display: block;
-    }
-
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-
-    .form-group {
-      margin: 10px 0;
-    }
-
-    label {
-      display: block;
-      font-weight: bold;
-      color: #666;
-    }
-
-    input {
-      width: 100%;
-      height: 30px;
-      border: 1px solid #ccc;
-      padding: 5px;
-      font-size: 16px;
-    }
-
-    .button {
-      width: 100%;
-      height: 40px;
-      background-color: #0099ff;
-      color: white;
-      border: none;
-      font-size: 18px;
-      cursor: pointer;
-    }
-
-    .button:hover {
-      background-color: #0077cc;
-    }
-  </style>
 </head>
+
 <body>
-  <div class="container">
-    <img src="logo.png" alt="Logo" class="logo">
-    <h1>Welcome to My Website</h1>
-    <form action="login.php" method="post">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-      </div>
-      <div class="form-group">
-        <input type="submit" value="Log In" class="button">
-      </div>
-    </form>
-  </div>
+    <div class="wrapper">
+        <form action="">
+            <h1>Login</h1>
+            <div class="input-box">
+                <input type="text" placeholder="Username"required>
+                <i class='bx bxs-user'></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="password"required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
+
+            <div class="remember-forget">
+                <label><input type="checkbox">Remember Me</label>
+                <a href="#">Forget Password</a>
+            </div>
+            <button type="submit" class="btn">Login</button>
+            
+        </form><div class="register-link">
+            <p>Don't have an account?<a href="#">Register Here</a></p>
+        </div>
+    </div>
+
 </body>
+
 </html>
+
